--- a/.github/workflows/ExtensionDistribution.yml
+++ b/.github/workflows/ExtensionDistribution.yml
@@ -9,13 +9,23 @@ on:
 env:
   PG_MAJOR: "17"
   PGVECTOR_REF: "v0.8.0"
-  PATCH_FILE: "pgvector_v0.8.0_hnsw_candidate_pruning_simhash.patch"
 
 jobs:
   # ===== Linux (linux/amd64) build =====
   build-linux:
-    name: Linux (bookworm, amd64)
+    name: Linux (${{ matrix.patch_name }}, amd64)
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        patch_file:
+          - "pgvector_v0.8.0_hnsw_candidate_pruning_simhash.patch"
+          - "pgvector_v0.8.0_hnsw_candidate_pruning_pq.patch"
+        include:
+          - patch_file: "pgvector_v0.8.0_hnsw_candidate_pruning_simhash.patch"
+            patch_name: "SimHash"
+          - patch_file: "pgvector_v0.8.0_hnsw_candidate_pruning_pq.patch"
+            patch_name: "PQ"
 
     # NOTE: 'container.image' cannot use the 'env' context at compile time.
     # If you change PG_MAJOR above, update this tag accordingly.
@@ -30,7 +40,8 @@ jobs:
         run: |
           echo "PG_MAJOR=$PG_MAJOR"
           echo "PGVECTOR_REF=$PGVECTOR_REF"
-          echo "PATCH_FILE=$PATCH_FILE"
+          echo "PATCH_FILE=${{ matrix.patch_file }}"
+          echo "PATCH_NAME=${{ matrix.patch_name }}"
           echo "Base image: postgres:17-bookworm"
 
       - name: Install build dependencies
@@ -81,7 +92,7 @@ jobs:
         id: meta
         run: |
           set -eux
-          name="pgvector-${PGVECTOR_REF}-pg${PG_MAJOR}-linux-amd64"
+          name="pgvector-${PGVECTOR_REF}-pg${PG_MAJOR}-${{ matrix.patch_name }}-linux-amd64"
           echo "ARTIFACT_NAME=${name}" >> "$GITHUB_ENV"
           echo "artifact_name=${name}" >> "$GITHUB_OUTPUT"
 
@@ -108,8 +119,19 @@ jobs:
 
   # ===== macOS (osx/amd64) build on Intel runner =====
   build-macos-amd64:
-    name: macOS amd64 (Intel)
+    name: macOS amd64 (${{ matrix.patch_name }}, Intel)
     runs-on: macos-13
+    strategy:
+      fail-fast: false
+      matrix:
+        patch_file:
+          - "pgvector_v0.8.0_hnsw_candidate_pruning_simhash.patch"
+          - "pgvector_v0.8.0_hnsw_candidate_pruning_pq.patch"
+        include:
+          - patch_file: "pgvector_v0.8.0_hnsw_candidate_pruning_simhash.patch"
+            patch_name: "SimHash"
+          - patch_file: "pgvector_v0.8.0_hnsw_candidate_pruning_pq.patch"
+            patch_name: "PQ"
 
     steps:
       - name: Checkout repository
@@ -119,7 +141,8 @@ jobs:
         run: |
           echo "PG_MAJOR=$PG_MAJOR"
           echo "PGVECTOR_REF=$PGVECTOR_REF"
-          echo "PATCH_FILE=$PATCH_FILE"
+          echo "PATCH_FILE=${{ matrix.patch_file }}"
+          echo "PATCH_NAME=${{ matrix.patch_name }}"
           echo "Runner: macOS Intel (amd64)"
 
       - name: Install PostgreSQL via Homebrew
@@ -158,8 +181,8 @@ jobs:
         working-directory: /tmp/pgvector
         run: |
           set -eux
-          test -f "${GITHUB_WORKSPACE}/${PATCH_FILE}"
-          patch -p1 < "${GITHUB_WORKSPACE}/${PATCH_FILE}"
+          test -f "${GITHUB_WORKSPACE}/${{ matrix.patch_file }}"
+          patch -p1 < "${GITHUB_WORKSPACE}/${{ matrix.patch_file }}"
 
       - name: Build (macOS Intel)
         working-directory: /tmp/pgvector
@@ -180,7 +203,7 @@ jobs:
         id: meta
         run: |
           set -eux
-          name="pgvector-${PGVECTOR_REF}-pg${PG_MAJOR}-osx-amd64"
+          name="pgvector-${PGVECTOR_REF}-pg${PG_MAJOR}-${{ matrix.patch_name }}-osx-amd64"
           echo "ARTIFACT_NAME=${name}" >> "$GITHUB_ENV"
           echo "artifact_name=${name}" >> "$GITHUB_OUTPUT"
 
@@ -216,8 +239,19 @@ jobs:
 
   # ===== macOS (osx/arm64) build on Apple Silicon runner =====
   build-macos-arm64:
-    name: macOS arm64 (Apple Silicon)
+    name: macOS arm64 (${{ matrix.patch_name }}, Apple Silicon)
     runs-on: macos-15
+    strategy:
+      fail-fast: false
+      matrix:
+        patch_file:
+          - "pgvector_v0.8.0_hnsw_candidate_pruning_simhash.patch"
+          - "pgvector_v0.8.0_hnsw_candidate_pruning_pq.patch"
+        include:
+          - patch_file: "pgvector_v0.8.0_hnsw_candidate_pruning_simhash.patch"
+            patch_name: "SimHash"
+          - patch_file: "pgvector_v0.8.0_hnsw_candidate_pruning_pq.patch"
+            patch_name: "PQ"
 
     steps:
       - name: Checkout repository
@@ -227,7 +261,8 @@ jobs:
         run: |
           echo "PG_MAJOR=$PG_MAJOR"
           echo "PGVECTOR_REF=$PGVECTOR_REF"
-          echo "PATCH_FILE=$PATCH_FILE"
+          echo "PATCH_FILE=${{ matrix.patch_file }}"
+          echo "PATCH_NAME=${{ matrix.patch_name }}"
           echo "Runner: macOS Apple Silicon (arm64)"
 
       - name: Install PostgreSQL via Homebrew (Apple Silicon)
@@ -266,8 +301,8 @@ jobs:
         working-directory: /tmp/pgvector
         run: |
           set -eux
-          test -f "${GITHUB_WORKSPACE}/${PATCH_FILE}"
-          patch -p1 < "${GITHUB_WORKSPACE}/${PATCH_FILE}"
+          test -f "${GITHUB_WORKSPACE}/${{ matrix.patch_file }}"
+          patch -p1 < "${GITHUB_WORKSPACE}/${{ matrix.patch_file }}"
 
       - name: Build (macOS arm64)
         working-directory: /tmp/pgvector
@@ -288,7 +323,7 @@ jobs:
         id: meta
         run: |
           set -eux
-          name="pgvector-${PGVECTOR_REF}-pg${PG_MAJOR}-osx-arm64"
+          name="pgvector-${PGVECTOR_REF}-pg${PG_MAJOR}-${{ matrix.patch_name }}-osx-arm64"
           echo "ARTIFACT_NAME=${name}" >> "$GITHUB_ENV"
           echo "artifact_name=${name}" >> "$GITHUB_OUTPUT"
 
