--- a/.github/workflows/DockerBuildTest.yml
+++ b/.github/workflows/DockerBuildTest.yml
@@ -16,8 +16,19 @@ permissions:
 
 jobs:
   build-and-verify:
-    name: Build & verify artifacts
+    name: Build & verify artifacts (${{ matrix.patch_name }})
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        patch_file:
+          - "pgvector_v0.8.0_hnsw_candidate_pruning_simhash.patch"
+          - "pgvector_v0.8.0_hnsw_candidate_pruning_pq.patch"
+        include:
+          - patch_file: "pgvector_v0.8.0_hnsw_candidate_pruning_simhash.patch"
+            patch_name: "SimHash"
+          - patch_file: "pgvector_v0.8.0_hnsw_candidate_pruning_pq.patch"
+            patch_name: "PQ"
     env:
       DOCKER_BUILDKIT: "1"
 
@@ -31,10 +42,11 @@ jobs:
       - name: Docker Build
         run: |
           set -euxo pipefail
-          IMAGE_TAG="pgvector-artifacts:pg${PG_MAJOR}-${PGVECTOR_REF}"
+          IMAGE_TAG="pgvector-artifacts:pg${PG_MAJOR}-${PGVECTOR_REF}-${{ matrix.patch_name }}"
           docker buildx build \
             --build-arg PG_MAJOR="${PG_MAJOR}" \
             --build-arg PGVECTOR_REF="${PGVECTOR_REF}" \
+            --build-arg PATCH_FILE="${{ matrix.patch_file }}" \
             --tag "${IMAGE_TAG}" \
             --load \
             .
@@ -67,7 +79,7 @@ jobs:
       - name: Upload extracted artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: pgvector-${{ env.PGVECTOR_REF }}-pg${{ env.PG_MAJOR }}-docker-linux-amd64
+          name: pgvector-${{ matrix.patch_name }}-${{ env.PGVECTOR_REF }}-pg${{ env.PG_MAJOR }}-docker-linux-amd64
           path: artifacts
 
       - name: Build out stage to dist or fallback to docker cp
@@ -77,6 +89,7 @@ jobs:
           if docker buildx build \
                --build-arg PG_MAJOR="${PG_MAJOR}" \
                --build-arg PGVECTOR_REF="${PGVECTOR_REF}" \
+               --build-arg PATCH_FILE="${{ matrix.patch_file }}" \
                --target out \
                --output type=local,dest=./dist \
                --progress=plain \
@@ -103,6 +116,5 @@ jobs:
       - name: Upload dist
         uses: actions/upload-artifact@v4
         with:
-          name: pgvector-${{ env.PGVECTOR_REF }}-pg${{ env.PG_MAJOR }}-docker-linux-amd64
+          name: pgvector-${{ matrix.patch_name }}-${{ env.PGVECTOR_REF }}-pg${{ env.PG_MAJOR }}-docker-linux-amd64-dist
           path: dist
-          overwrite: true
